// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button: color variants: should render JobStreet callToAction button 1`] = `
<button
  className="root jobStreet root_callToAction"
>
  SEEK
</button>
`;

exports[`Button: color variants: should render JobsDB callToAction button 1`] = `
<button
  className="root jobsDB root_callToAction"
>
  SEEK
</button>
`;

exports[`Button: color variants: should render callToAction button 1`] = `
<button
  className="root root_callToAction"
>
  SEEK
</button>
`;

exports[`Button: color variants: should render hyperlink color button 1`] = `
<button
  className="root root_hyperlink"
>
  SEEK
</button>
`;

exports[`Button: color variants: should render primary button 1`] = `
<button
  className="root root_primary"
>
  SEEK
</button>
`;

exports[`Button: color variants: should render secondary button 1`] = `
<button
  className="root root_secondary"
>
  SEEK
</button>
`;

exports[`Button: should render as an anchor with href="https://www.seek.com.au" 1`] = `
<a
  className="root root_hyperlink"
  href="https://www.seek.com.au"
>
  SEEK
</a>
`;

exports[`Button: should render as div 1`] = `
<div
  className="root root_callToAction"
>
  SEEK
</div>
`;

exports[`Button: should render compact font size 1`] = `
<button
  className="root compact root_callToAction"
>
  SEEK
</button>
`;

exports[`Button: should render custom component based on it’s reference 1`] = `
<CustomComponent
  className="root root_callToAction"
>
  SEEK
</CustomComponent>
`;

exports[`Button: should render disabled 1`] = `
<button
  className="root root_callToAction disabled"
>
  SEEK
</button>
`;

exports[`Button: should render with array of nodes 1`] = `
<button
  className="root root_callToAction"
>
  <span>
    SEEK
  </span>
  <span>
    AU
  </span>
</button>
`;

exports[`Button: should render with className 1`] = `
<button
  className="root foo root_callToAction"
>
  SEEK
</button>
`;

exports[`Button: should render with node 1`] = `
<button
  className="root root_callToAction"
>
  <h5>
    SEEK
  </h5>
</button>
`;
